# color-organ

./: .gitignore  README.md  Test.hs  build  color-organ.cabal  test.c
cbits/: colororgan.c  spectrum.c
include/: Spectrum.h  colororgan.h
src/: Channel.hs  ColorOrgan.hs  Crossover.hs  Spectrum.hs  Spectum.cpp  main.c  main.cpp  spectrum.c
src/Spectrum/: Internal.hs
