name:                   color-organ
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

category:               Unclassified
synopsis:               I'm too lame to describe my project
description:            I'm too lame to describe my project

Library
  cc-options:           -std=c99
  include-dirs:         include
  c-sources:            cbits/spectrum.c
                        cbits/colororgan.c
  pkgconfig-depends:    fftw3
  frameworks:           OpenAL
  
  ghc-options:          -Wall
  hs-source-dirs:       src
  exposed-modules:      ColorOrgan,
                        Channel,
                        Crossover,
                        Spectrum
  other-modules:        Spectrum.Internal
  build-depends:        base >= 3,
                        fingertree,
                        monoid-statistics == 0.0.0.2,
                        splines == 0.5.*,
                        statistics,
                        vector
